--- a/projects/vs/sonia-prime/sonia-prime.vcxproj
+++ b/projects/vs/sonia-prime/sonia-prime.vcxproj
@@ -20,14 +20,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\applied\dllmain.cpp" />
-    <ClCompile Include="..\..\..\sonia\services\aio\aio_builder.cpp" />
-    <ClCompile Include="..\..\..\sonia\services\aio\aio_service.cpp" />
     <ClCompile Include="..\..\..\sonia\services\basic_service_factory.cpp" />
     <ClCompile Include="..\..\..\sonia\services\environment.cpp" />
+    <ClCompile Include="..\..\..\sonia\services\io\io_service.cpp" />
+    <ClCompile Include="..\..\..\sonia\services\io\io_service_builder.cpp" />
     <ClCompile Include="..\..\..\sonia\services\local_service_registry.cpp" />
     <ClCompile Include="..\..\..\sonia\services\local_type_registry.cpp" />
+    <ClCompile Include="..\..\..\sonia\services\net\basic_connector.cpp" />
+    <ClCompile Include="..\..\..\sonia\services\net\net_builder.cpp" />
+    <ClCompile Include="..\..\..\sonia\services\net\net_service.cpp" />
     <ClCompile Include="..\..\..\sonia\services\prime_bundle.cpp" />
-    <ClCompile Include="..\..\..\sonia\services\scheduler\scheduler_builder.cpp" />
+    <ClCompile Include="..\..\..\sonia\services\scheduler\scheduler_service_builder.cpp" />
     <ClCompile Include="..\..\..\sonia\services\scheduler\scheduler_service.cpp" />
     <ClCompile Include="..\..\..\sonia\services\services.cpp" />
     <ClCompile Include="..\..\..\sonia\services\services_host.cpp" />
@@ -40,16 +43,21 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\sonia\prime_config.hpp" />
-    <ClInclude Include="..\..\..\sonia\services\aio\aio_builder.hpp" />
-    <ClInclude Include="..\..\..\sonia\services\aio\aio_configuration.hpp" />
-    <ClInclude Include="..\..\..\sonia\services\aio\aio_service.hpp" />
     <ClInclude Include="..\..\..\sonia\services\bundle.hpp" />
     <ClInclude Include="..\..\..\sonia\services\environment.hpp" />
     <ClInclude Include="..\..\..\sonia\services\host.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\io\io_service.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\io\io_service_builder.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\io\io_service_configuration.hpp" />
     <ClInclude Include="..\..\..\sonia\services\local_service_registry.hpp" />
     <ClInclude Include="..\..\..\sonia\services\local_type_registry.hpp" />
-    <ClInclude Include="..\..\..\sonia\services\scheduler\scheduler_builder.hpp" />
-    <ClInclude Include="..\..\..\sonia\services\scheduler\scheduler_configuration.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\net\basic_connector.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\net\connector.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\net\net_builder.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\net\net_configuration.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\net\net_service.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\scheduler\scheduler_service_builder.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\scheduler\scheduler_service_configuration.hpp" />
     <ClInclude Include="..\..\..\sonia\services\scheduler\scheduler_service.hpp" />
     <ClInclude Include="..\..\..\sonia\services\service.hpp" />
     <ClInclude Include="..\..\..\sonia\services\host_impl.hpp" />
