project structure refactoring

--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -19,29 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\sonia\algorithm\construct.hpp" />
-    <ClInclude Include="..\..\..\sonia\algorithm\copy.hpp" />
-    <ClInclude Include="..\..\..\sonia\algorithm\pull.hpp" />
-    <ClInclude Include="..\..\..\sonia\application\configuration.hpp" />
     <ClInclude Include="..\..\..\sonia\array_view.hpp" />
     <ClInclude Include="..\..\..\sonia\automatic.hpp" />
     <ClInclude Include="..\..\..\sonia\build_config.hpp" />
-    <ClInclude Include="..\..\..\sonia\caches\car.hpp" />
-    <ClInclude Include="..\..\..\sonia\caches\clock.hpp" />
-    <ClInclude Include="..\..\..\sonia\caches\utiltiy.hpp" />
+    <ClInclude Include="..\..\..\sonia\concurrency.hpp" />
     <ClInclude Include="..\..\..\sonia\cstdint.hpp" />
     <ClInclude Include="..\..\..\sonia\config.hpp" />
     <ClInclude Include="..\..\..\sonia\exceptions.hpp" />
     <ClInclude Include="..\..\..\sonia\function.hpp" />
-    <ClInclude Include="..\..\..\sonia\functional\abs.hpp" />
-    <ClInclude Include="..\..\..\sonia\functional\forwarder.hpp" />
-    <ClInclude Include="..\..\..\sonia\functional\has.hpp" />
-    <ClInclude Include="..\..\..\sonia\functional\hash.hpp" />
-    <ClInclude Include="..\..\..\sonia\functional\is_negative.hpp" />
-    <ClInclude Include="..\..\..\sonia\functional\mover.hpp" />
-    <ClInclude Include="..\..\..\sonia\functional\range_equal.hpp" />
-    <ClInclude Include="..\..\..\sonia\functional\range_less.hpp" />
-    <ClInclude Include="..\..\..\sonia\functional\reference_wrapper.hpp" />
     <ClInclude Include="..\..\..\sonia\iterator_traits.hpp" />
     <ClInclude Include="..\..\..\sonia\logger\loggable.hpp" />
     <ClInclude Include="..\..\..\sonia\logger\logger.hpp" />
@@ -71,16 +56,30 @@
     <ClInclude Include="..\..\..\sonia\services\service_locator.hpp" />
     <ClInclude Include="..\..\..\sonia\shared_ptr.hpp" />
     <ClInclude Include="..\..\..\sonia\string.hpp" />
-    <ClInclude Include="..\..\..\sonia\thread.hpp" />
     <ClInclude Include="..\..\..\sonia\type_traits.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\algorithm\construct.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\algorithm\copy.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\algorithm\pull.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\basic_local_registry.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\bind.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\bind_command.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\buffer.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\caches\car.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\caches\clock.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\caches\utiltiy.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\command.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\comparison_operators.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\explicit_operator_bool.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\file_persister.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\functional\abs.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\functional\forwarder.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\functional\has.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\functional\hash.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\functional\is_negative.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\functional\mover.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\functional\range_equal.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\functional\range_less.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\functional\reference_wrapper.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\iterators\hash_combine_iterator.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\iterators\proxy.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\json\json_cast.hpp" />
