--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -4,9 +4,6 @@
     <Filter Include="sonia">
       <UniqueIdentifier>{1154b024-252b-4bf2-b375-4aa91afd6ee2}</UniqueIdentifier>
     </Filter>
-    <Filter Include="sonia.algorithm">
-      <UniqueIdentifier>{b3afdb08-fb25-497c-a7c8-60f85a24d7a7}</UniqueIdentifier>
-    </Filter>
     <Filter Include="sonia.logger">
       <UniqueIdentifier>{c89f215b-69eb-4024-bb0b-cf0d2b84ee34}</UniqueIdentifier>
     </Filter>
@@ -15,9 +12,6 @@
     </Filter>
     <Filter Include="sonia.utility\iterators">
       <UniqueIdentifier>{95458c7b-86c2-427b-ab4a-f18d13beec67}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="sonia.application">
-      <UniqueIdentifier>{07b0c1e7-bd5a-4964-859f-a6eaa94b1f92}</UniqueIdentifier>
     </Filter>
     <Filter Include="sonia.utility\parsers">
       <UniqueIdentifier>{cb9f65ac-5ab8-4f9c-b16a-ca68a77791ff}</UniqueIdentifier>
@@ -43,9 +37,6 @@
     <Filter Include="sonia.utility\optimized">
       <UniqueIdentifier>{1f52dd0d-5980-4cf9-8708-8484462d9cad}</UniqueIdentifier>
     </Filter>
-    <Filter Include="sonia.functional">
-      <UniqueIdentifier>{148357da-58cb-4d01-b7c3-a5b28eda6034}</UniqueIdentifier>
-    </Filter>
     <Filter Include="sonia.utility\range">
       <UniqueIdentifier>{8f6f7125-96ce-4429-9228-69649c7e6e96}</UniqueIdentifier>
     </Filter>
@@ -58,9 +49,6 @@
     <Filter Include="sonia.utility\serialization">
       <UniqueIdentifier>{f850a6ea-5dc1-447c-ab9c-167b7918cdec}</UniqueIdentifier>
     </Filter>
-    <Filter Include="sonia.caches">
-      <UniqueIdentifier>{d0afa015-3b6c-4092-a803-cd5c57985927}</UniqueIdentifier>
-    </Filter>
     <Filter Include="sonia.posix">
       <UniqueIdentifier>{ad730f3a-0675-4e1e-bbb9-33bffd66ebfc}</UniqueIdentifier>
     </Filter>
@@ -69,6 +57,15 @@
     </Filter>
     <Filter Include="sonia.services.scheduler">
       <UniqueIdentifier>{7a02a053-7571-4567-b77e-41984419817e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.utility\algorithm">
+      <UniqueIdentifier>{83d8f6d0-1a5e-4bef-992a-bd99289d76c5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.utility\caches">
+      <UniqueIdentifier>{560b6c90-6370-42c4-b1cb-9a9cb278ab4c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.utility\functional">
+      <UniqueIdentifier>{6fb41180-e38c-40c6-82ed-22efa48ae9df}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -89,9 +86,6 @@
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\type_traits.hpp">
       <Filter>sonia</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\algorithm\pull.hpp">
-      <Filter>sonia.algorithm</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\automatic.hpp">
       <Filter>sonia</Filter>
@@ -141,9 +135,6 @@
     <ClInclude Include="..\..\..\sonia\build_config.hpp">
       <Filter>sonia</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\thread.hpp">
-      <Filter>sonia</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\persister.hpp">
       <Filter>sonia.utility</Filter>
     </ClInclude>
@@ -171,9 +162,6 @@
     <ClInclude Include="..\..\..\sonia\services.hpp">
       <Filter>sonia</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\application\configuration.hpp">
-      <Filter>sonia.application</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\parsers\json\lexertl_lexer.hpp">
       <Filter>sonia.utility\parsers\json</Filter>
     </ClInclude>
@@ -191,9 +179,6 @@
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\parsers\lexer.hpp">
       <Filter>sonia.utility\parsers</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\algorithm\copy.hpp">
-      <Filter>sonia.algorithm</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\options.hpp">
       <Filter>sonia</Filter>
@@ -234,15 +219,6 @@
     <ClInclude Include="..\..\..\sonia\utility\optimized\integer.hpp">
       <Filter>sonia.utility\optimized</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\functional\is_negative.hpp">
-      <Filter>sonia.functional</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\functional\abs.hpp">
-      <Filter>sonia.functional</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\functional\reference_wrapper.hpp">
-      <Filter>sonia.functional</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\number\decimal.hpp">
       <Filter>sonia.utility\number</Filter>
     </ClInclude>
@@ -258,32 +234,14 @@
     <ClInclude Include="..\..\..\sonia\utility\number\basic_decimal.hpp">
       <Filter>sonia.utility\number</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\functional\hash.hpp">
-      <Filter>sonia.functional</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\buffer.hpp">
       <Filter>sonia.utility</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\functional\forwarder.hpp">
-      <Filter>sonia.functional</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\functional\mover.hpp">
-      <Filter>sonia.functional</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\range\combine.hpp">
       <Filter>sonia.utility\range</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\algorithm\construct.hpp">
-      <Filter>sonia.algorithm</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\optimized\array.hpp">
       <Filter>sonia.utility\optimized</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\functional\range_equal.hpp">
-      <Filter>sonia.functional</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\functional\range_less.hpp">
-      <Filter>sonia.functional</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\windows.hpp">
       <Filter>sonia.utility</Filter>
@@ -396,15 +354,6 @@
     <ClInclude Include="..\..\..\sonia\utility\serialization\vector.hpp">
       <Filter>sonia.utility\serialization</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\caches\car.hpp">
-      <Filter>sonia.caches</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\caches\clock.hpp">
-      <Filter>sonia.caches</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\caches\utiltiy.hpp">
-      <Filter>sonia.caches</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\sonia\sal_types.hpp">
       <Filter>sonia</Filter>
     </ClInclude>
@@ -441,14 +390,59 @@
     <ClInclude Include="..\..\..\sonia\services\io\tcp_write_output_iterator.hpp">
       <Filter>sonia.services.io</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\functional\has.hpp">
-      <Filter>sonia.functional</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\sonia\services\io\tcp_read_output_iterator.hpp">
       <Filter>sonia.services.io</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\iterators\proxy.hpp">
       <Filter>sonia.utility\iterators</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\caches\car.hpp">
+      <Filter>sonia.utility\caches</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\caches\clock.hpp">
+      <Filter>sonia.utility\caches</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\caches\utiltiy.hpp">
+      <Filter>sonia.utility\caches</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\algorithm\construct.hpp">
+      <Filter>sonia.utility\algorithm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\algorithm\copy.hpp">
+      <Filter>sonia.utility\algorithm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\algorithm\pull.hpp">
+      <Filter>sonia.utility\algorithm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\functional\abs.hpp">
+      <Filter>sonia.utility\functional</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\functional\forwarder.hpp">
+      <Filter>sonia.utility\functional</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\functional\has.hpp">
+      <Filter>sonia.utility\functional</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\functional\hash.hpp">
+      <Filter>sonia.utility\functional</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\functional\is_negative.hpp">
+      <Filter>sonia.utility\functional</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\functional\mover.hpp">
+      <Filter>sonia.utility\functional</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\functional\range_equal.hpp">
+      <Filter>sonia.utility\functional</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\functional\range_less.hpp">
+      <Filter>sonia.utility\functional</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\functional\reference_wrapper.hpp">
+      <Filter>sonia.utility\functional</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\concurrency.hpp">
+      <Filter>sonia</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
