type_info -> type_index

--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -141,7 +141,7 @@
     <ClInclude Include="..\..\..\sonia\utility\thread\spinlock_trier.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\type_durable_id.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\type_id.hpp" />
-    <ClInclude Include="..\..\..\sonia\utility\type_info.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\type_info_obs.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\variadic.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\windows.hpp" />
   </ItemGroup>
