--- a/projects/cmake/sonia-prime-lib/CMakeLists.txt
+++ b/projects/cmake/sonia-prime-lib/CMakeLists.txt
@@ -14,21 +14,21 @@ set (BUNDLE_SOURCES
     ${BUNDLE_HOME}/sonia/utility/parsers/json/json_model.cpp
     ${BUNDLE_HOME}/sonia/utility/parameters/parameters.cpp
     ${BUNDLE_HOME}/sonia/utility/iterators/file_region_iterator.cpp
-    ${BUNDLE_HOME}/sonia/scheduler/basic_scheduler.cpp
-    ${BUNDLE_HOME}/sonia/scheduler/fiber_work_stealing_scheduler.cpp
-    ${BUNDLE_HOME}/sonia/io/file.cpp
+    ${BUNDLE_HOME}/sonia/services/scheduler/basic_scheduler.cpp
+    ${BUNDLE_HOME}/sonia/services/scheduler/fiber_work_stealing_scheduler.cpp
+    ${BUNDLE_HOME}/sonia/services/io/file.cpp
 )
 
 if ( CMAKE_SYSTEM_NAME STREQUAL "Windows")
     set (BUNDLE_SOURCES ${BUNDLE_SOURCES}
         ${BUNDLE_HOME}/sonia/sal/windows_sal.cpp
         ${BUNDLE_HOME}/sonia/utility/windows.cpp
-        ${BUNDLE_HOME}/sonia/io/io_factory_win.cpp
+        ${BUNDLE_HOME}/sonia/services/io/io_factory_win.cpp
     )
 elseif ( CMAKE_SYSTEM_NAME STREQUAL "Linux")
     set (BUNDLE_SOURCES ${BUNDLE_SOURCES}
         ${BUNDLE_HOME}/sonia/sal/linux_sal.cpp
-        ${BUNDLE_HOME}/sonia/io/io_factory_linux.cpp
+        ${BUNDLE_HOME}/sonia/services/io/io_factory_linux.cpp
     )
 endif ()
 
