--- a/projects/cmake/sonia-prime/CMakeLists.txt
+++ b/projects/cmake/sonia-prime/CMakeLists.txt
@@ -13,13 +13,20 @@ set (BUNDLE_SOURCES
     ${BUNDLE_HOME}/sonia/services/basic_service_factory.cpp
     ${BUNDLE_HOME}/sonia/services/local_service_registry.cpp
     ${BUNDLE_HOME}/sonia/services/local_type_registry.cpp
-    ${BUNDLE_HOME}/sonia/services/scheduler/scheduler_builder.cpp
+    ${BUNDLE_HOME}/sonia/services/scheduler/scheduler_service_builder.cpp
     ${BUNDLE_HOME}/sonia/services/scheduler/scheduler_service.cpp
-    ${BUNDLE_HOME}/sonia/services/aio/aio_builder.cpp
-    ${BUNDLE_HOME}/sonia/services/aio/aio_service.cpp
-    ${BUNDLE_HOME}/sonia/utility/posix/signals.cpp
+    ${BUNDLE_HOME}/sonia/services/io/io_service_builder.cpp
+    ${BUNDLE_HOME}/sonia/services/io/io_service.cpp
+    ${BUNDLE_HOME}/sonia/services/net/net_service_builder.cpp
+    ${BUNDLE_HOME}/sonia/services/net/net_service.cpp
     ${BUNDLE_HOME}/sonia/services/prime_bundle.cpp
 )
+
+if ( CMAKE_SYSTEM_NAME STREQUAL "Linux")
+    set (BUNDLE_SOURCES ${BUNDLE_SOURCES}
+        ${BUNDLE_HOME}/sonia/utility/posix/signals.cpp
+    )
+endif ()
 
 add_definitions(-DSONIA_PRIME_EXPORTS)
 
