--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -69,12 +69,18 @@
     <ClInclude Include="..\..\..\sonia\utility\caches\utiltiy.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\command.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\comparison_operators.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\concurrency\rw_fiber_mutex.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\concurrency\rw_fiber_mutex_ext.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\concurrency\spinlock_trier.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\explicit_operator_bool.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\file_persister.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\functional\abs.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\functional\forwarder.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\functional\has.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\functional\hash.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\functional\hash\array_view.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\functional\hash\string.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\functional\hash\vector.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\functional\is_negative.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\functional\mover.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\functional\range_equal.hpp" />
@@ -136,9 +142,7 @@
     <ClInclude Include="..\..\..\sonia\utility\serialization\type_durable_id.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\serialization\vector.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\simple_queue.hpp" />
-    <ClInclude Include="..\..\..\sonia\utility\thread\rw_fiber_mutex.hpp" />
-    <ClInclude Include="..\..\..\sonia\utility\thread\rw_fiber_mutex_ext.hpp" />
-    <ClInclude Include="..\..\..\sonia\utility\thread\spinlock_trier.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\streaming\type_index.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\type_durable_id.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\type_id.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\type_info_obs.hpp" />
