--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -43,14 +43,8 @@
     <Filter Include="sonia.sal">
       <UniqueIdentifier>{51847fa8-f43c-46c8-8939-7d494d843269}</UniqueIdentifier>
     </Filter>
-    <Filter Include="sonia.utility\thread">
-      <UniqueIdentifier>{de59bf45-ac48-45e2-be5e-c0fcd98b36c1}</UniqueIdentifier>
-    </Filter>
     <Filter Include="sonia.utility\serialization">
       <UniqueIdentifier>{f850a6ea-5dc1-447c-ab9c-167b7918cdec}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="sonia.posix">
-      <UniqueIdentifier>{ad730f3a-0675-4e1e-bbb9-33bffd66ebfc}</UniqueIdentifier>
     </Filter>
     <Filter Include="sonia.services.io">
       <UniqueIdentifier>{74d1bad4-5a7d-4958-8ab3-1e3822da573a}</UniqueIdentifier>
@@ -66,6 +60,18 @@
     </Filter>
     <Filter Include="sonia.utility\functional">
       <UniqueIdentifier>{6fb41180-e38c-40c6-82ed-22efa48ae9df}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.utility\streaming">
+      <UniqueIdentifier>{6c7cfc3b-5b74-4f8c-9d53-1788d71f9c38}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.utility\functional\hash">
+      <UniqueIdentifier>{d4100e8e-34b8-459a-9075-9bda4393a249}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.utility.posix">
+      <UniqueIdentifier>{ad730f3a-0675-4e1e-bbb9-33bffd66ebfc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.utility\concurrency">
+      <UniqueIdentifier>{de59bf45-ac48-45e2-be5e-c0fcd98b36c1}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -282,15 +288,6 @@
     <ClInclude Include="..\..\..\sonia\utility\basic_local_registry.hpp">
       <Filter>sonia.utility</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\utility\thread\rw_fiber_mutex.hpp">
-      <Filter>sonia.utility\thread</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\utility\thread\spinlock_trier.hpp">
-      <Filter>sonia.utility\thread</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\utility\thread\rw_fiber_mutex_ext.hpp">
-      <Filter>sonia.utility\thread</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\command.hpp">
       <Filter>sonia.utility</Filter>
     </ClInclude>
@@ -355,7 +352,7 @@
       <Filter>sonia</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\posix\signals.hpp">
-      <Filter>sonia.posix</Filter>
+      <Filter>sonia.utility.posix</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\linked_buffers.hpp">
       <Filter>sonia.utility</Filter>
@@ -444,6 +441,27 @@
     <ClInclude Include="..\..\..\sonia\utility\type_info_obs.hpp">
       <Filter>sonia.utility</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\streaming\type_index.hpp">
+      <Filter>sonia.utility\streaming</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\functional\hash\array_view.hpp">
+      <Filter>sonia.utility\functional\hash</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\functional\hash\vector.hpp">
+      <Filter>sonia.utility\functional\hash</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\functional\hash\string.hpp">
+      <Filter>sonia.utility\functional\hash</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\concurrency\rw_fiber_mutex.hpp">
+      <Filter>sonia.utility\concurrency</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\concurrency\rw_fiber_mutex_ext.hpp">
+      <Filter>sonia.utility\concurrency</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\concurrency\spinlock_trier.hpp">
+      <Filter>sonia.utility\concurrency</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\sonia\logger\logger.cpp">
@@ -501,7 +519,7 @@
       <Filter>sonia.services</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\utility\posix\signals.cpp">
-      <Filter>sonia.posix</Filter>
+      <Filter>sonia.utility.posix</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\services\io\file.cpp">
       <Filter>sonia.services.io</Filter>
