--- a/projects/vs/sonia-prime/sonia-prime.vcxproj.filters
+++ b/projects/vs/sonia-prime/sonia-prime.vcxproj.filters
@@ -32,9 +32,6 @@
     <ClCompile Include="..\..\..\sonia\services\net\net_service.cpp">
       <Filter>sonia.services\net</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\sonia\services\net\net_builder.cpp">
-      <Filter>sonia.services\net</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\sonia\services\net\basic_connector.cpp">
       <Filter>sonia.services\net</Filter>
     </ClCompile>
@@ -46,6 +43,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\services\scheduler\scheduler_service_builder.cpp">
       <Filter>sonia.services\scheduler</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\services\net\net_service_builder.cpp">
+      <Filter>sonia.services\net</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -108,12 +108,6 @@
     <ClInclude Include="..\..\..\sonia\services\net\net_service.hpp">
       <Filter>sonia.services\net</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\services\net\net_configuration.hpp">
-      <Filter>sonia.services\net</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\services\net\net_builder.hpp">
-      <Filter>sonia.services\net</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\sonia\services\net\connector.hpp">
       <Filter>sonia.services\net</Filter>
     </ClInclude>
@@ -134,6 +128,12 @@
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\services\scheduler\scheduler_service_builder.hpp">
       <Filter>sonia.services\scheduler</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\services\net\net_service_configuration.hpp">
+      <Filter>sonia.services\net</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\services\net\net_service_builder.hpp">
+      <Filter>sonia.services\net</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
